# TP_ARCHI3

./: CMakeLists.txt  README.md  function_Parallele.c  function_Parallele.h  function_seq.c  function_seq.h  main.c  rapport.tex
